--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flip_card: ^0.6.0
   font_awesome_flutter: ^10.3.0
+  http: 0.13.5
+
+  #Firebase Database
+  cloud_firestore: ^4.3.0
 
 dev_dependencies:
   flutter_test:
